# temperatur-server-daemon

./: Cargo.toml  README.md  docker-compose.yml  push.sh  sqlx-data.json
.github/workflows/: build.yml
root/etc/systemd/system/: msh-server-daemon.service
src/: error.rs  main.rs
