[package]
name = "server-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
axum = "0.6"
axum-client-ip = "0.3"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tower-http = {version = "0.3", features = ["tracing"]}
chrono = "0.4"
sqlx = {version = "0.6", features = ["mysql", "runtime-tokio-rustls", "chrono", "offline"]}
serde = {version = "1", features = ["derive"]}
dotenv = "0.15"